RSVP Page with captcha. Bug: Captcha box has wrong font on first load.

--- a/style/_global.scss
+++ b/style/_global.scss
@@ -4,7 +4,6 @@ $light-red: #fdabab;
 $light-green: #c8edeb;
 $light-blue: #cee3f6;
 $light-gray: #dbdee1;
-$light-teal: #08e5ff;
 
 $dark-purple: #232331;
 $dark-teal: #232a31;
